Anna88babenko@gmail.com
Bitcoin 500

--- a/_статьи/ру/index.html
+++ b/_статьи/ру/index.html
@@ -1,6 +1,7 @@
----
+От-1Mh5h7LsQjNZCCgiyMKZuybiGEEttXb2Wv--
 layout: index
 title: Руководство по открытому программному обеспечению
 lang: ru
 permalink: /ru/
 ---
+Перевод получил Bitcoin1e-12 500 
